force-app/main/default/objects/FEC_Cash_24_Contract__c/FEC_Cash_24_Contract__c.object-meta.xml
<CustomObject>
    <label>Cash 24 Contract</label>
    <nameField>
        <label>Cash 24 Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash 24 Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>