force-app/main/default/objects/FEC_Cash_24_Contract__c/fields/FEC_Account_No__c.field-meta.xml
<CustomField>
    <fullName>FEC_Account_No__c</fullName>
    <label>Account No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>