force-app/main/default/objects/FEC_Cash_24_Contract__c/fields/FEC_Adjust_Recovery__c.field-meta.xml
<CustomField>
    <fullName>FEC_Adjust_Recovery__c</fullName>
    <label>Adjust Recovery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>