force-app/main/default/objects/FEC_Cash_24_Contract__c/fields/FEC_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Balance_Amount__c</fullName>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>