force-app/main/default/objects/FEC_Cash_24_Contract__c/fields/FEC_Company__c.field-meta.xml
<CustomField>
    <fullName>FEC_Company__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>