force-app/main/default/objects/FEC_Cash_24_Contract__c/fields/FEC_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contract_Status__c</fullName>
    <label>Contract Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>