force-app/main/default/objects/FEC_Cash_24_Contract__c/fields/FEC_Expected_Cashflow__c.field-meta.xml
<CustomField>
    <fullName>FEC_Expected_Cashflow__c</fullName>
    <label>Expected Cashflow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>