force-app/main/default/objects/FEC_Cash_24_Contract__c/fields/FEC_Note__c.field-meta.xml
<CustomField>
    <fullName>FEC_Note__c</fullName>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>