force-app/main/default/objects/FEC_Cash_24_Contract__c/fields/FEC_Processed_DTTM__c.field-meta.xml
<CustomField>
    <fullName>FEC_Processed_DTTM__c</fullName>
    <label>Processed DTTM</label>
    <type>DateTime</type>
</CustomField>