force-app/main/default/objects/FEC_Cash_24_Contract__c/fields/FEC_Product__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>