force-app/main/default/objects/FEC_Cash_24_Contract__c/fields/FEC_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sold_Date__c</fullName>
    <label>Sold Date</label>
    <type>Date</type>
</CustomField>